<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_weather_location">

    <SwitchPreference
        android:key="@string/key_user_device_location"
        android:title="@string/title_user_device_location"
        android:summary="@string/summary_user_device_location"
        android:defaultValue="true"
        android:disableDependentsState="true"/>

    <EditTextPreference
        android:key="@string/key_location"
        android:title="@string/title_location"
        android:summary="@string/summary_locaton"
        android:defaultValue="Sao Paulo"
        android:dependency="@string/key_user_device_location"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_units">

        <ListPreference
            android:key="@string/key_list_units"
            android:title="@string/title_units"
            android:summary="%s"
            android:defaultValue="METRIC"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"/>

    </PreferenceCategory>
</PreferenceScreen>